feat(device) detect Videocon models: Delite 11 (V503630), Kryton 22 Plus (V505024),  Metal Pro 2 (V505920), Metal Pro 1 (V505820), V505430, V504630, Starr 100 (V406018) feat(device) detect Wiko model: Kenny (v3913)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15431,7 +15431,7 @@ Vestel:
 
 # Videocon
 Videocon:
-  regex: 'Videocon[_ \-]|VT75C|V502430'
+  regex: 'Videocon[_ \-]|(?:VT75C|V406018|V50(?:2430|3630|5024|5430|4630|5[98]20))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Videocon_V1585'
@@ -15444,6 +15444,18 @@ Videocon:
       device: 'tablet'
     - regex: 'V502430(?:[);/ ]|$)'
       model: 'Kryton 3'
+    - regex: 'V505024(?:[);/ ]|$)'
+      model: 'Kryton 22 Plus'
+    - regex: 'V503630(?:[);/ ]|$)'
+      model: 'Delite 11'
+    - regex: 'V505920(?:[);/ ]|$)'
+      model: 'Metal Pro 2'
+    - regex: 'V505820(?:[);/ ]|$)'
+      model: 'Metal Pro 1'
+    - regex: 'V406018(?:[);/ ]|$)'
+      model: 'Starr 100'
+    - regex: '(V505430|V504630)(?:[);/ ]|$)'
+      model: '$1'
 
 # Vodafone
 Vodafone:
@@ -15708,7 +15720,7 @@ Wexler:
 
 # Wiko (wikomobile.com)
 Wiko:
-  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 Go|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C8[06]0|K[346]00|P130|P200|C200SN)|WC300|W-(?:V7[23]0|V8[30]0|P[36]11|K420|K510S?|K130)-(?:TMV|TIM|TVM|EEA|SUN|SWI|OPE|BYT|DU|TH)|WIM Lite|W-K360-TV|W-V600|W-K200|W-U300|U307AS|CINK PEAX 2|HIGHWAY PURE|C210AE'
+  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 Go|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C8[06]0|K[346]00|P130|P200|C200SN)|WC300|W-(?:V7[23]0|V8[30]0|P[36]11|K420|K510S?|K130)-(?:TMV|TIM|TVM|EEA|SUN|SWI|OPE|BYT|DU|TH)|WIM Lite|W-K360-TV|W-V600|W-K200|W-U300|U307AS|CINK PEAX 2|HIGHWAY PURE|C210AE|v3913'
   device: 'smartphone'
   models:
     - regex: '(?:WIKO-)?Cink Peax 2'
@@ -15785,6 +15797,8 @@ Wiko:
       model: 'Life'
     - regex: 'U307AS(?:[);/ ]|$)'
       model: 'Life 2'
+    - regex: 'v3913(?:[);/ ]|$)'
+      model: 'Kenny'
     - regex: '(?:WIKO-)?Lenny[ -_]?3 Max'
       model: 'Lenny 3 Max'
     - regex: '(?:WIKO-)?Lenny[ -_]?4 Plus'
