feat(device) detect Mobiistar models: Lai Zumbo S Lite (2017), Lai Zumbo S (2017) feat(device) detect Zopo model: X1i feat(device) detect Ziox model: F9 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10151,25 +10151,25 @@ Mobicel:
 
 # Mobiistar
 Mobiistar:
-  regex: 'Mobiistar|Zumbo_|PRIME X MAX|X1 Notch|E1 Selfie'
+  regex: 'Mobiistar|Zumbo[ _]S|PRIME X MAX|X1 Notch|E1 Selfie'
   device: 'smartphone'
   models:
     - regex: 'X1 Notch(?:[);/ ]|$)'
       model: 'X1 Notch'
     - regex: 'E1 Selfie(?:[);/ ]|$)'
       model: 'E1 Selfie'
-    - regex: 'mobiistar_LAI_Zumbo Build'
+    - regex: 'mobiistar_LAI_Zumbo(?:[);/ ]|$)'
       model: 'Zumbo'
-    - regex: 'Zumbo_S_2017 Build'
+    - regex: 'Zumbo[_ ]S[_ ]2017(?:[);/ ]|$)'
       model: 'Lai Zumbo S (2017)'
-    - regex: 'Zumbo_S_2017_Lite Build'
+    - regex: 'Zumbo[_ ]S[_ ]2017[_ ]Lite(?:[);/ ]|$)'
       model: 'Lai Zumbo S Lite (2017)'
-    - regex: 'mobiistar ZUMBO S2( Dual)? Build'
+    - regex: 'mobiistar ZUMBO S2( Dual)'
       model: 'Zumbo S2'
-    - regex: 'Mobiistar_LAI_Zumbo_J Build'
-      model: 'Lai Zumbo J'
-    - regex: 'Mobiistar_LAI_Zumbo_J_2017 Build'
+    - regex: 'Mobiistar_LAI_Zumbo_J_2017(?:[);/ ]|$)'
       model: 'Lai Zumbo J (2017)'
+    - regex: 'Mobiistar_LAI_Zumbo_J(?:[);/ ]|$)'
+      model: 'Lai Zumbo J'
     - regex: 'Mobiistar_Zumbo_J2'
       model: 'Lai Zumbo J2'
     - regex: 'Mobiistar[_ ]Zumbo[_ ]S2'
@@ -10192,9 +10192,9 @@ Mobiistar:
       model: 'Touch Lai 512'
     - regex: 'mobiistar LAI 504([KC])'
       model: 'Lai 504$1'
-    - regex: 'mobiistar LAI Y Build'
+    - regex: 'mobiistar LAI Y'
       model: 'Lai Y'
-    - regex: 'mobiistar PRIME X 2017 Build'
+    - regex: 'mobiistar PRIME X 2017'
       model: 'Prime X'
     - regex: 'mobiistar[ _]PRIME[ _](X1|558|X[ _]Plus|X[ _]Grand) Build'
       model: 'Prime $1'
@@ -16987,7 +16987,7 @@ Zopo:
       model: 'Flash X2'
     - regex: 'ZP781(?:[);/ ]|$)'
       model: 'Flash G5 Plus'
-    - regex: '(Flash X3|ZP[0-9]{2,}[^/;)]+)(?: Build|\))'
+    - regex: '(?:ZOPO_)?(Flash X3|X1i|ZP[0-9]{2,}[^/;)]+)(?: Build|\))'
       model: '$1'
 
 # ZTE
@@ -19251,7 +19251,7 @@ Ziox:
   regex: 'ZIOX[_ ]|(?:Astra Viva 4G|Astra NXT Pro)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'ZIOX_F9_PRO(?:[);/ ]|$)'
+    - regex: 'ZIOX[_ ]F9[_ ]PRO(?:[);/ ]|$)'
       model: 'F9 Pro'
     - regex: 'Astra Viva 4G(?:[);/ ]|$)'
       model: 'Astra Viva 4G'
