feat(tests) added test for brand Alcatel model: Go Flip feat(tests) added test for brand bq models: Velvet, Next
issue #6616

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1701,7 +1701,7 @@ Alcatel:
       model: 'Quick Flip'
     - regex: '4044O'
       model: 'Cingular Flip 2'
-    - regex: '4044[MNT]'
+    - regex: '(?:Alcatel)?4044[MNT]'
       model: 'Go Flip'
     - regex: '5044[GS]'
       model: 'U50'
@@ -17449,10 +17449,10 @@ Zen:
 
 # Zync
 Zync:
-  regex: 'ZYNC|(Cloud Z5|Z1000|Z18|Z99 Dual Core|Z99[_ ][23]G|Z99|Z900[_ ]Plus|Z909|Z930[+]|Z930)(?:[);/ ]|$)'
+  regex: 'ZYNC|(Cloud Z5|Z1000|Z18|Z99|Z99[_ ][23]G|Z99|Z900[_ ]Plus|Z909|Z930[+]|Z930)(?:[);/ ]|$)'
   device: 'tablet'
   models:
-    - regex: '(Z18| DuZ99al Core|Z99[_ ][23]G|Z99|Z900[_ ]Plus|Z909|Z930[+]|Z930)'
+    - regex: '(Z18| DuZ99al Core|Z99[_ ][23]G|Z99 Dual Core|Z99|Z900[_ ]Plus|Z909|Z930[+]|Z930)'
       model: '$1'
     - regex: '(Z1000[^/;]+)Build'
       model: '$1'
