feat(app) detect app Podbean feat(app) detect app TuneIn Radio Pro feat(app) detect app TuneIn Radio feat(app) detect app Alexa Media Player and detect device Alexa
issue #6637

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -436,3 +436,21 @@
 - regex: 'CGNBrowser/(\d+[\.\d]+)'
   name: 'CGN'
   version: '$1'
+
+# Podbean (http://podbean.com | https://play.google.com/store/apps/details?id=com.podbean.app.podcast)
+- regex: 'Podbean/.+App (\d+[\.\d]+)'
+  name: 'Podbean'
+  version: '$1'
+
+# Alexa Media Player
+- regex: 'AlexaMediaPlayer/(\d+[\.\d]+)'
+  name: 'Alexa Media Player'
+  version: '$1'
+
+# TuneIn Radio Pro
+- regex: 'TuneIn Radio Pro(?:[^/]+)?/(\d+[\.\d]+)'
+  name: 'TuneIn Radio Pro'
+  version: '$1'
+- regex: 'TuneIn Radio(?:[^/]+)?/(\d+[\.\d]+)'
+  name: 'TuneIn Radio'
+  version: '$1'
