--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -799,3 +799,83 @@
     model: iPhone
   os_family: iOS
   browser_family: Unknown
+-
+  user_agent: Podbean/Android App 8.3.2 (http://podbean.com)
+  os:
+    name: Android
+    version: ""
+    platform: ""
+  client:
+    type: mobile app
+    name: Podbean
+    version: 8.3.2
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: AlexaMediaPlayer/2.0.201528.0 (Linux;Android 5.1.1) ExoPlayerLib/1.5.9
+  os:
+    name: Android
+    version: 5.1.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Alexa Media Player
+    version: 2.0.201528.0
+  device:
+    type: smart speaker
+    brand: Amazon
+    model: Alexa
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: TuneIn Radio Pro/25.7.3 (Linux;Android 5.0) ExoPlayerLib/2.11.8
+  os:
+    name: Android
+    version: "5.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: TuneIn Radio Pro
+    version: 25.7.3
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: TuneIn Radio Pro By Farsroid.com/25.7.3 (Linux;Android 10) ExoPlayerLib/2.11.8
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: mobile app
+    name: TuneIn Radio Pro
+    version: 25.7.3
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: TuneIn Radio/25.7.3 (Linux;Android 7.1.1) ExoPlayerLib/2.11.8,gzip(gfe)
+  os:
+    name: Android
+    version: 7.1.1
+    platform: ""
+  client:
+    type: mobile app
+    name: TuneIn Radio
+    version: 25.7.3
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Android
+  browser_family: Unknown
