--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14457,7 +14457,7 @@ Starmobile:
 
 # Kindle
 Amazon:
-  regex: 'KF(?:OT|ONWI|TT|JWI|JWA|[DFS]OWI|A[PRSU]WI|T[BH]WI|SAW[IA]|GIWI|KAWI|MAWI|MEWI|MUWI|SUWI)(?:[);/ ]|$)|Kindle|Silk/\d+\.\d+|Amazon (?:Tate|Jem)|AFT[ABMNRST]|SD4930UR|AEO(BC|KN)(?:[);/ ]|$)'
+  regex: 'KF(?:OT|ONWI|TT|JWI|JWA|[DFS]OWI|A[PRSU]WI|T[BH]WI|SAW[IA]|GIWI|KAWI|MAWI|MEWI|MUWI|SUWI)(?:[);/ ]|$)|Kindle|Silk/\d+\.\d+|AlexaMediaPlayer|Amazon (?:Tate|Jem)|AFT[ABMNRST]|SD4930UR|AEO(BC|KN)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'AFTA'
@@ -14533,6 +14533,9 @@ Amazon:
 
     - regex: 'AEO(BC|KN)(?:[);/ ]|$)'
       model: 'Echo'
+      device: 'smart speaker'
+    - regex: 'AlexaMediaPlayer'
+      model: 'Alexa'
       device: 'smart speaker'
 
 # Symphony
