--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -125,6 +125,10 @@
 ##########
 # Android
 ##########
+- regex: 'Podbean/Android'
+  name: 'Android'
+  version: ''
+
 - regex: 'Pinterest for Android/.+; (\d(?:[\d\.]+)?)\)$'
   name: 'Android'
   version: '$1'
