--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -879,3 +879,19 @@
     model: ""
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Podcaster/1.0.0 (Linux;Android 9) ExoPlayerLib/2.9.6
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: mobile app
+    name: Podcaster
+    version: 1.0.0
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Android
+  browser_family: Unknown
