feat(app) detect app Podimo feat(app) detect app Evolve Podcast feat(app) detect app Swoot
issue #6637

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -460,7 +460,22 @@
   name: 'Podcaster'
   version: '$1'
 
+# Swoot
+- regex: 'Swoot/(\d+[\.\d]+)'
+  name: 'Swoot'
+  version: '$1'
+
 # RadioPublic (https://play.google.com/store/apps/details?id=com.radiopublic.android)
 - regex: 'RadioPublic/android-(\d+[\.\d]+)'
   ame: 'RadioPublic'
+  version: '$1'
+
+# Podimo (https://play.google.com/store/apps/details?id=com.podimo)
+- regex: 'Podimo/(\d+[\.\d]+)'
+  name: 'Podimo'
+  version: '$1'
+
+# Evolve Podcast (https://apps.apple.com/us/app/id1199070742)
+- regex: 'com.evolve.podcast/(\d+[\.\d]+)'
+  name: 'Evolve Podcast'
   version: '$1'
