--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -125,7 +125,7 @@
 ##########
 # Android
 ##########
-- regex: 'Podbean/Android'
+- regex: '(?:Podbean|Podimo)(?:.+)?/Android'
   name: 'Android'
   version: ''
 
