--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -895,3 +895,67 @@
     model: ""
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Swoot/1.76.0 (Linux;Android 10) ExoPlayerLib/2.9.6
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: mobile app
+    name: Swoot
+    version: 1.76.0
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Podimo/1.20.1 build 148/Android 29
+  os:
+    name: Android
+    version: ""
+    platform: ""
+  client:
+    type: mobile app
+    name: Podimo
+    version: 1.20.1
+  device:
+    type: ""
+    brand: ""
+    model: ""
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: com.evolve.podcast/3.18.0 (iPad; ) (build 1901, iOS 12.4.4)
+  os:
+    name: iOS
+    version: 12.4.4
+    platform: ""
+  client:
+    type: mobile app
+    name: Evolve Podcast
+    version: 3.18.0
+  device:
+    type: tablet
+    brand: Apple
+    model: iPad
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: com.evolve.podcast/3.18.0 (iPhone; ) (build 1901, iOS 13.3.1)
+  os:
+    name: iOS
+    version: 13.3.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Evolve Podcast
+    version: 3.18.0
+  device:
+    type: smartphone
+    brand: Apple
+    model: iPhone
+  os_family: iOS
+  browser_family: Unknown
