feat(library) detect library: Embarcadero URI Client feat(bot) detect bot: HuaweiWebCat

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4066,3 +4066,12 @@
     producer:
       name: Expanse Inc.
       url: https://expanse.co/
+-
+  user_agent: 'HuaweiWebCatBot/6.0) (To acquire the allowed html pages as reliable information of URL categorization in the automatic process for Huawei Web Categorization.; https://isecurity.huawei.com/; sec at huawei dot com)'
+  bot:
+    name: HuaweiWebCat
+    category: Crawler
+    url: https://isecurity.huawei.com
+    producer:
+      name: Huawei Technologies Co., Ltd.
+      url: https://huawei.com
