--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2306,6 +2306,14 @@
     name: 'Expanse Inc.'
     url: 'https://expanse.co/'
 
+- regex: 'HuaweiWebCatBot'
+  name: 'HuaweiWebCat'
+  category: 'Crawler'
+  url: 'https://isecurity.huawei.com'
+  producer:
+    name: 'Huawei Technologies Co., Ltd.'
+    url: 'https://huawei.com'
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
