--- a/regexes/client/libraries.yml
+++ b/regexes/client/libraries.yml
@@ -125,3 +125,8 @@
 - regex: 'WinHttp.WinHttpRequest.+([\.\d]+)'
   name: 'WinHttp WinHttpRequest'
   version: '$1'
+
+# THTTPClient in delphi 10+ default useragent
+- regex: 'Embarcadero URI Client/([\.\d]+)'
+  name: 'Embarcadero URI Client'
+  version: '$1'
