--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -1350,13 +1350,20 @@
     name: 'Tailrank Inc'
     url: 'http://spinn3r.com'
 
-- regex: 'Sputnik(Image)?Bot'
+- regex: 'SputnikBot'
   name: 'Sputnik Bot'
-  category: ''
+  category: 'Crawler'
   url: ''
-  producer:
-    name: ''
-    url: ''
+
+- regex: 'SputnikFaviconBot'
+  name: 'Sputnik Favicon Bot'
+  url: ''
+
+  category: 'Crawler'
+- regex: 'SputnikImageBot'
+  name: 'Sputnik Image Bot'
+  url: ''
+  category: 'Crawler'
 
 - regex: 'SurveyBot'
   name: 'Survey Bot'
@@ -2307,12 +2314,20 @@
     url: 'https://expanse.co/'
 
 - regex: 'HuaweiWebCatBot'
-  name: 'HuaweiWebCat'
+  name: 'HuaweiWebCatBot'
   category: 'Crawler'
   url: 'https://isecurity.huawei.com'
   producer:
     name: 'Huawei Technologies Co., Ltd.'
     url: 'https://huawei.com'
+
+- regex: 'Hatena-Favicon'
+  name: 'Hatena Favicon'
+  category: 'Crawler'
+  url: 'https://www.hatena.ne.jp/faq/'
+  producer:
+    name: 'Hatena Co., Ltd.'
+    url: 'https://www.hatena.ne.jp'
 
 # Generic detections
 
