--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -479,3 +479,7 @@
 - regex: 'com.evolve.podcast/(\d+[\.\d]+)'
   name: 'Evolve Podcast'
   version: '$1'
+
+- regex: ' Rocket.Chat\+?/(\d+[\.\d]+)'
+  name: 'Rocket Chat'
+  version: '$1'
