Improves detection for Windows operating system

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1896,3 +1896,9 @@
     short_name: PCL
     version: 2.0.0.12
     platform: x86
+-
+  user_agent: Wget/1.19.4 (mingw32)
+  os:
+    name: Windows
+    version: ""
+    platform: ""
