--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -288,6 +288,10 @@
 ##########
 # Windows
 ##########
+- regex: 'mingw32'
+  name: 'Windows'
+  version: ''
+
 - regex: 'Windows/(\d+\.\d+)'
   name: 'Windows'
   version: '$1'
