Improves detection for macOS operating system

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1900,5 +1900,13 @@
   user_agent: Wget/1.19.4 (mingw32)
   os:
     name: Windows
+    short_name: WIN
     version: ""
+    platform: ""
+-
+  user_agent: Wget/1.20.3 (darwin16.7.0)
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.12.6
     platform: ""
