--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -608,31 +608,31 @@
 ##########
 # Mac
 ##########
-- regex: 'CFNetwork/.+ Darwin/20.2.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/20.2.0.*(x86_64)|darwin20.2.0'
   name: 'Mac'
   version: '11.1'
 
-- regex: 'CFNetwork/.+ Darwin/20.[01].0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/20.[01].0.*(x86_64)|darwin20.[01].0'
   name: 'Mac'
   version: '11.0'
 
-- regex: 'CFNetwork/.+ Darwin/19.6.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/19.6.0.*(x86_64)|darwin19.6.0'
   name: 'Mac'
   version: '10.15.6'
 
-- regex: 'CFNetwork/.+ Darwin/19.5.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/19.5.0.*(x86_64)|darwin19.5.0'
   name: 'Mac'
   version: '10.15.5'
 
-- regex: 'CFNetwork/.+ Darwin/19.4.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/19.4.0.*(x86_64)|darwin19.4.0'
   name: 'Mac'
   version: '10.15.4'
 
-- regex: 'CFNetwork/.+ Darwin/19.3.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/19.3.0.*(x86_64)|darwin19.3.0'
   name: 'Mac'
   version: '10.15.3'
 
-- regex: 'CFNetwork/.+ Darwin/19.2.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/19.2.0.*(x86_64)|darwin19.2.0'
   name: 'Mac'
   version: '10.15.2'
 
@@ -640,7 +640,7 @@
   name: 'Mac'
   version: '10.15'
 
-- regex: 'CFNetwork/.+ Darwin/18.2.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/18.2.0.*(x86_64)|darwin18.2.0'
   name: 'Mac'
   version: '10.14.1'
 
@@ -648,27 +648,27 @@
   name: 'Mac'
   version: '10.14'
 
-- regex: 'CFNetwork/.+ Darwin/17.7.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/17.7.0.*(x86_64)|darwin17.7.0'
   name: 'Mac'
   version: '10.13.6'
 
-- regex: 'CFNetwork/.+ Darwin/17.6.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/17.6.0.*(x86_64)|darwin17.6.0'
   name: 'Mac'
   version: '10.13.5'
 
-- regex: 'CFNetwork/.+ Darwin/17.5.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/17.5.0.*(x86_64)|darwin17.5.0'
   name: 'Mac'
   version: '10.13.4'
 
-- regex: 'CFNetwork/.+ Darwin/17.4.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/17.4.0.*(x86_64)|darwin17.4.0'
   name: 'Mac'
   version: '10.13.3'
 
-- regex: 'CFNetwork/.+ Darwin/17.3.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/17.3.0.*(x86_64)|darwin17.3.0'
   name: 'Mac'
   version: '10.13.2'
 
-- regex: 'CFNetwork/.+ Darwin/17.2.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/17.2.0.*(x86_64)|darwin17.2.0'
   name: 'Mac'
   version: '10.13.1'
 
@@ -676,27 +676,27 @@
   name: 'Mac'
   version: '10.13'
 
-- regex: 'CFNetwork/.+ Darwin/16.7.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/16.7.0.*(x86_64)|darwin16.7.0'
   name: 'Mac'
   version: '10.12.6'
 
-- regex: 'CFNetwork/.+ Darwin/16.6.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/16.6.0.*(x86_64)|darwin16.6.0'
   name: 'Mac'
   version: '10.12.5'
 
-- regex: 'CFNetwork/.+ Darwin/16.5.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/16.5.0.*(x86_64)|darwin16.5.0'
   name: 'Mac'
   version: '10.12.4'
 
-- regex: 'CFNetwork/.+ Darwin/16.3.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/16.3.0.*(x86_64)|darwin16.3.0'
   name: 'Mac'
   version: '10.12.3'
 
-- regex: 'CFNetwork/.+ Darwin/16.2.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/16.2.0.*(x86_64)|darwin16.2.0'
   name: 'Mac'
   version: '10.12.2'
 
-- regex: 'CFNetwork/.+ Darwin/16.1.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/16.1.0.*(x86_64)|darwin16.1.0'
   name: 'Mac'
   version: '10.12.1'
 
@@ -708,23 +708,23 @@
   name: 'Mac'
   version: '10.12'
 
-- regex: 'CFNetwork/.+ Darwin/15.6.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/15.6.0.*(x86_64)|darwin15.6.0'
   name: 'Mac'
   version: '10.11.6'
 
-- regex: 'CFNetwork/.+ Darwin/15.5.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/15.5.0.*(x86_64)|darwin15.5.0'
   name: 'Mac'
   version: '10.11.5'
 
-- regex: 'CFNetwork/.+ Darwin/15.4.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/15.4.0.*(x86_64)|darwin15.4.0'
   name: 'Mac'
   version: '10.11.4'
 
-- regex: 'CFNetwork/.+ Darwin/15.3.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/15.3.0.*(x86_64)|darwin15.3.0'
   name: 'Mac'
   version: '10.11.3'
 
-- regex: 'CFNetwork/.+ Darwin/15.2.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/15.2.0.*(x86_64)|darwin15.2.0'
   name: 'Mac'
   version: '10.11.2'
 
@@ -732,19 +732,19 @@
   name: 'Mac'
   version: '10.11'
 
-- regex: 'CFNetwork/.+ Darwin/14.5.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/14.5.0.*(x86_64)|darwin14.5.0'
   name: 'Mac'
   version: '10.10.5'
 
-- regex: 'CFNetwork/.+ Darwin/14.4.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/14.4.0.*(x86_64)|darwin14.4.0'
   name: 'Mac'
   version: '10.10.4'
 
-- regex: 'CFNetwork/.+ Darwin/14.3.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/14.3.0.*(x86_64)|darwin14.3.0'
   name: 'Mac'
   version: '10.10.3'
 
-- regex: 'CFNetwork/.+ Darwin/14.1.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/14.1.0.*(x86_64)|darwin14.1.0'
   name: 'Mac'
   version: '10.10.2'
 
@@ -752,19 +752,19 @@
   name: 'Mac'
   version: '10.10'
 
-- regex: 'CFNetwork/.+ Darwin/13.4.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/13.4.0.*(x86_64)|darwin13.4.0'
   name: 'Mac'
   version: '10.9.5'
 
-- regex: 'CFNetwork/.+ Darwin/13.3.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/13.3.0.*(x86_64)|darwin13.3.0'
   name: 'Mac'
   version: '10.9.4'
 
-- regex: 'CFNetwork/.+ Darwin/13.2.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/13.2.0.*(x86_64)|darwin13.2.0'
   name: 'Mac'
   version: '10.9.3'
 
-- regex: 'CFNetwork/.+ Darwin/13.1.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/13.1.0.*(x86_64)|darwin13.1.0'
   name: 'Mac'
   version: '10.9.2'
 
@@ -772,23 +772,23 @@
   name: 'Mac'
   version: '10.9'
 
-- regex: 'CFNetwork/.+ Darwin/12.5.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/12.5.0.*(x86_64)|darwin12.5.0'
   name: 'Mac'
   version: '10.8.5'
 
-- regex: 'CFNetwork/.+ Darwin/12.4.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/12.4.0.*(x86_64)|darwin12.4.0'
   name: 'Mac'
   version: '10.8.4'
 
-- regex: 'CFNetwork/.+ Darwin/12.3.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/12.3.0.*(x86_64)|darwin12.3.0'
   name: 'Mac'
   version: '10.8.3'
 
-- regex: 'CFNetwork/.+ Darwin/12.2.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/12.2.0.*(x86_64)|darwin12.2.0'
   name: 'Mac'
   version: '10.8.2'
 
-- regex: 'CFNetwork/.+ Darwin/12.1.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/12.1.0.*(x86_64)|darwin12.1.0'
   name: 'Mac'
   version: '10.8.1'
 
@@ -796,23 +796,23 @@
   name: 'Mac'
   version: '10.8'
 
-- regex: 'CFNetwork/.+ Darwin/11.5.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/11.5.0.*(x86_64)|darwin11.5.0'
   name: 'Mac'
   version: '10.7.5'
 
-- regex: 'CFNetwork/.+ Darwin/11.4.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/11.4.0.*(x86_64)|darwin11.4.0'
   name: 'Mac'
   version: '10.7.4'
 
-- regex: 'CFNetwork/.+ Darwin/11.3.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/11.3.0.*(x86_64)|darwin11.3.0'
   name: 'Mac'
   version: '10.7.3'
 
-- regex: 'CFNetwork/.+ Darwin/11.2.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/11.2.0.*(x86_64)|darwin11.2.0'
   name: 'Mac'
   version: '10.7.2'
 
-- regex: 'CFNetwork/.+ Darwin/11.1.0.*(x86_64)'
+- regex: 'CFNetwork/.+ Darwin/11.1.0.*(x86_64)|darwin11.1.0'
   name: 'Mac'
   version: '10.7.1'
 
