Improves version detection for Windows Phone operating system

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1910,3 +1910,10 @@
     short_name: MAC
     version: 10.12.6
     platform: ""
+-
+  user_agent: 'Mozilla/5.0 (osmeta like iPhone; U; osmeta 8.3.31975207; RM-1116_15357) AppleWebKit/602.1.1 (KHTML, like Gecko) Mobile/31975207 [FBAN/MessengerForWinPhone;FBAV/75.0.0.28.70;FBBV/31986830;FBRV/0;FBDV/WindowsPhone;FBMD/RM-1116_15357;FBSN/Windows Phone;FBSV/10.0.14364.0;FBSS/3;FBCR/;FBID/phone;FBLC/en_US;FBOP/45]'
+  os:
+    name: Windows Phone
+    short_name: WPH
+    version: 10.0.14364.0
+    platform: ""
