Improves version detection for Windows operating system

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -292,6 +292,10 @@
 ##########
 # Windows
 ##########
+- regex: 'FBW.+FBSV/(\d+[\.\d]*);'
+  name: 'Windows'
+  version: '$1'
+
 - regex: 'mingw32'
   name: 'Windows'
   version: ''
@@ -355,10 +359,6 @@
 - regex: 'Windows 3.1'
   name: 'Windows'
   version: '3.1'
-
-- regex: 'FBW.*FBSV/(\d+[\.\d]*);'
-  name: 'Windows'
-  version: '$1'
 
 - regex: 'Windows'
   name: 'Windows'
