Improves detection for macOS operating system

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1917,3 +1917,10 @@
     short_name: WPH
     version: 10.0.14364.0
     platform: ""
+-
+  user_agent: curl/7.21.4 (x86_64-apple-darwin12.2.0) libcurl/7.21.4 OpenSSL/0.9.8x zlib/1.2.5 libidn/1.20
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.8.2
+    platform: x64
