Improves version detection for iOS

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1924,3 +1924,10 @@
     short_name: MAC
     version: 10.8.2
     platform: x64
+-
+  user_agent: Mozilla/5.0 (iPod; U; CPU iPhone OS 421 like Mac OS X; fy-DE) AppleWebKit/533.17.9 (KHTML like Gecko) Mobile/8C148 iPod41 BingWeb/3.02.1641.20120106
+  os:
+    name: iOS
+    short_name: IOS
+    version: 4.2.1
+    platform: ""
