--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -581,6 +581,10 @@
   name: 'iOS'
   version: '$1'
 
+- regex: 'iPhone OS ([0-9]{1})([0-9]{1})([0-9]{1})'
+  name: 'iOS'
+  version: '$1.$2.$3'
+
 - regex: '(?:CPU OS|iPh(?:one)?[ _]OS|iOS)[ _/](\d+(?:[_\.]\d+)*)'
   name: 'iOS'
   version: '$1'
