Change from Qwant Mobile iOS to Qwant Mobile

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -636,7 +636,7 @@
 
 # Qwant Mobile
 - regex: 'QwantiOS/(\d+[\.\d]+)'
-  name: 'Qwant Mobile iOS'
+  name: 'Qwant Mobile'
   version: '$1'
   engine:
     default: 'WebKit'
