--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3059,7 +3059,7 @@
   user_agent: QwantMobile/2.0 (iPad; CPU OS 10_3_4 like Mac OS X) AppleWebKit/603.3.8 (KHTML, like Gecko) QwantiOS/2.4.1b1 Mobile/14G61 Safari/603.3.8
   client:
     type: browser
-    name: Qwant Mobile iOS
+    name: Qwant Mobile
     version: 2.4.1
     engine: WebKit
     engine_version: 603.3.8
