--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3247,3 +3247,11 @@
     version: 83.0.0
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 5.1) AppleWebKit/537.1 (KHTML, like Gecko) Chrome/21.0.1180.75 Safari/537.1 AvantBrowser/Tri-Core
+  client:
+    type: browser
+    name: Avant Browser
+    version: ""
+    engine: WebKit
+    engine_version: "537.1"
