--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3247,3 +3247,11 @@
     version: 83.0.0
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 5.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/33.0.1750.157 CoRom/33.0.1750.157 CocCoc/33.0.1750.157 Safari/537.36
+  client:
+    type: browser
+    name: Coc Coc
+    version: 33.0.1750.157
+    engine: Blink
+    engine_version: ""
