--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -299,7 +299,7 @@
     name: 'CloudFlare'
     url: 'http://www.cloudflare.com'
 
-- regex: 'coccoc/|coccocbot(-ads|-fast|-image|-shopping|-web)?'
+- regex: 'coccoc.com'
   name: 'Cốc Cốc Bot'
   url: 'https://help.coccoc.com/en/search-engine/coccoc-robots'
   category: 'Search bot'
