--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1373,7 +1373,7 @@
 # additional features for Vietnamese users. Its regex has to be placed
 # before generic Chrome regex, or Chrome regex will match first and
 # the browser is mistaken as "Chrome".
-- regex: '(?:coc_coc_browser|coccocbrowser)(?:/(\d+[\.\d]+))?'
+- regex: '(?:coc_coc_browser|coccocbrowser|CocCoc)(?:/(\d+[\.\d]+))?'
   name: 'Coc Coc'
   version: '$1'
   engine:
