Improves detection for Baidu Spark browser

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1226,7 +1226,7 @@
   version: '$1'
 
 #Baidu Spark
-- regex: '(?:(?:BD)?Spark|BIDUBrowser)[/ ](\d+[\.\d]*)'
+- regex: '(?:(?:BD)?Spark(?:Safe)?|BIDUBrowser)[/ ](\d+[\.\d]*)'
   name: 'Baidu Spark'
   version: '$1'
 
