--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3247,3 +3247,11 @@
     version: 83.0.0
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/33.0.1750.146 SparkSafe/2.x Safari/537.36
+  client:
+    type: browser
+    name: Baidu Spark
+    version: "2"
+    engine: WebKit
+    engine_version: "537.36"
