Adds detection for Qazweb browser

--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3271,3 +3271,11 @@
     version: "2"
     engine: WebKit
     engine_version: "537.36"
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.1) /20100101 AppleWebKit/537.36 (KHTML, like Gecko) Gecko/20100101 Firefox/68.0 Qazweb/2.0
+  client:
+    type: browser
+    name: Qazweb
+    version: "2.0"
+    engine: Gecko
+    engine_version: ""
