--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Qazweb (http://www.qazweb.com/)
+- regex: 'Qazweb/(\d+[\.\d]+)'
+  name: 'Qazweb'
+  version: '$1'
+  engine:
+    default: 'Gecko'
+
 # Deledao (https://www.deledao.com/)
 - regex: '(?:DeledaoPersonal|DeledaoFamily)/(\d+[\.\d]+)'
   name: 'Deledao'
