--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# Chromium GOST (https://github.com/deemru/chromium-gost)
+- regex: 'Chrome/(\d+[\.\d]+) \(Chromium GOST\)'
+  name: 'Chromium GOST'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # Deledao (https://www.deledao.com/)
 - regex: '(?:DeledaoPersonal|DeledaoFamily)/(\d+[\.\d]+)'
   name: 'Deledao'
