--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3287,3 +3287,11 @@
     version: 5.2.1.5000
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.78 Chedot/8.0.1 Safari/537.36
+  client:
+    type: browser
+    name: Chedot
+    version: 8.0.1
+    engine: Blink
+    engine_version: ""
