--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3287,3 +3287,11 @@
     version: 5.2.1.5000
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Degdegan/75.4.128 Chrome/87.4.3497.128 Safari/537.36
+  client:
+    type: browser
+    name: deg-degan
+    version: 75.4.128
+    engine: Blink
+    engine_version: ""
