--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -5,6 +5,13 @@
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
+# deg-degan (https://degdegan.com/)
+- regex: 'Degdegan/(\d+[\.\d]+)'
+  name: 'deg-degan'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # Deledao (https://www.deledao.com/)
 - regex: '(?:DeledaoPersonal|DeledaoFamily)/(\d+[\.\d]+)'
   name: 'Deledao'
