--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -3287,3 +3287,11 @@
     version: 5.2.1.5000
     engine: Blink
     engine_version: ""
+-
+  user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3727.0 Mandarin Browser/1.0.0.0 Safari/537.36
+  client:
+    type: browser
+    name: Mandarin
+    version: 1.0.0.0
+    engine: Blink
+    engine_version: ""
