--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -9,6 +9,8 @@
 - regex: 'Secure/(?:(\d+[\.\d]+))?'
   name: 'Secure Browser'
   version: '$1'
+  engine:
+    default: 'Blink'
 
 # Chromium GOST (https://github.com/deemru/chromium-gost)
 - regex: 'Chrome/(\d+[\.\d]+) \(Chromium GOST\)'
