feat(device) detect new brand Ditecma models: M1092R, M1092R-1, M1092R-2, M1092Rv4, M1092Rv5

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -20784,6 +20784,12 @@ Seatel:
     - regex: 'Seatel[ _](L2|V8[AE]|T[5-8]|R6|V[89])(?:[);/ ]|$)'
       model: '$1'
 
+# Ditecma (Ditecma.com)
+Ditecma:
+  regex: '(M1092R(?:-[12]|V[45])?)(?:[);/ ]|$)'
+  device: 'tablet'
+  model: '$1'
+
 # Yoka TV
 'Yoka TV':
   regex: 'KB2 PRO(?:[);/ ]|$)'
