feat(device) detect new brand iQ&T models: IFoo U200, IFoo H55 feat(device) detect new brand Pixela models: Infineum Z45, Infineum Z5 feat(device) detect brand Inco models: Flex 2S, S4, Bloom 2 feat(device) detect brand IMO Mobile models: S80 Hero, Q feat(device) detect brand Blu model: Dash X Plus LTE feat(device) detect brand Kzen model: Dart KZ07

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2680,6 +2680,8 @@ Blu:
       model: 'Energy X Plus'
     - regex: 'LIFE XL'
       model: 'Life XL'
+    - regex: 'DASH[ _]X[ _]PLUS[ _]LTE'
+      model: 'Dash X Plus LTE'
     - regex: 'DASH X PLUS'
       model: 'Dash X Plus'
     - regex: 'DASH 4.5'
@@ -7475,7 +7477,7 @@ M4tel:
 
 # IMO Mobile or In My Opinion Mobile
 IMO Mobile:
-  regex: '(?:IMO)(?:[);/ ]|$)'
+  regex: 'IMO[ _]\w'
   device: 'smartphone'
   models:
     - regex: 'IMO[ _]Q([23]) Plus(?:[);/ ]|$)'
@@ -7488,6 +7490,8 @@ IMO Mobile:
       model: 'Feel A2'
     - regex: 'IMO[ _]S50(?:[);/ ]|$)'
       model: 'S50 Light'
+    - regex: 'IMO[ _]S80(?:[);/ ]|$)'
+      model: 'S80 Hero'
     - regex: 'IMO[ _]S89(?:[);/ ]|$)'
       model: 'S89 Miracle'
     - regex: 'IMO[ _]S88(?:[);/ ]|$)'
@@ -7506,6 +7510,8 @@ IMO Mobile:
       model: 'Q8 Clarity'
     - regex: 'IMO[ _]Discovery II(?:[);/ ]|$)'
       model: 'Discovery II'
+    - regex: 'IMO[ _]Q(?:[);/ ]|$)'
+      model: 'Q'
 
     - regex: 'IMO[ _](Y5|Z[67])(?:[);/ ]|$)'
       model: 'Tab $1'
@@ -15733,6 +15739,17 @@ Wexler:
     - regex: '(ULTIMA 7 TWIST PLUS)(?:[);/ ]|$)'
       model: '$1'
 
+# Inco (incomobile.com)
+Inco:
+  regex: '(?:Inco[ _](Aurora II|Sphere|Plain[_ ]2|Flex 2S|S4|Bloom 2)|(Horizon_S|Horizon \+))(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: '(?:Inco[ _])?(Plain[_ ]2|Horizon_S|Horizon \+|Aurora II|Flex 2S|S4|Bloom 2)(?:[);/ ]|$)'
+      model: '$1'
+    - regex: 'Inco Sphere(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Sphere'
+
 # Wiko (wikomobile.com)
 Wiko:
   regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 Go|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C8[06]0|K[346]00|P130|P200|C200SN)|WC300|W-(?:V7[23]0|V8[30]0|P[36]11|K420|K510S?|K130)-(?:TMV|TIM|TVM|EEA|SUN|SWI|OPE|BYT|DU|TH)|WIM Lite|W-K360-TV|W-V600|W-K200|W-U300|U307AS|CINK PEAX 2|HIGHWAY PURE|C210AE|v3913'
@@ -18921,13 +18938,16 @@ OzoneHD:
 
 # KZEN (kzen.me)
 Kzen:
-  regex: '(?:Ureki_U1|Victor V1)(?:[);/ ]|$)'
+  regex: '(?:Ureki_U1|Victor V1|DART KZ07)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Ureki_U1'
       model: 'Ureki U1'
     - regex: 'Victor V1'
       model: 'Victor V1'
+    - regex: 'DART KZ07'
+      device: 'tablet'
+      model: 'Dart KZ07'
 
 # MELROSE
 Melrose:
@@ -19652,6 +19672,12 @@ Pixelphone:
   device: 'smartphone'
   model: 'S1'
 
+# Pixela
+Pixela:
+  regex: 'Infineum[_ ](Z4?5)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: 'Infineum $1'
+
 # Iris
 Iris:
   regex: '(?:Vox[_ ](?:[45]S|Alpha|POP|STEEL Plus|Energy)|IS2_?Plus|IS2S|Next_P_PRO)(?:[);/ ]|$)'
@@ -19858,17 +19884,6 @@ Reach:
   regex: '(Allure[_ ](?:Ultra(?:[_]Curve)?|Secure|Admire|Rise))(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
-
-# Inco (incomobile.com)
-Inco:
-  regex: '(?:Inco[ _](Aurora II|Sphere|Plain[_ ]2)|(Horizon_S|Horizon \+))(?:[);/ ]|$)'
-  device: 'smartphone'
-  models:
-    - regex: '(?:Inco[ _])?(Plain[_ ]2|Horizon_S|Horizon \+|Aurora II)(?:[);/ ]|$)'
-      model: '$1'
-    - regex: 'Inco Sphere(?:[);/ ]|$)'
-      device: 'tablet'
-      model: 'Sphere'
 
 # MobiWire
 MobiWire:
@@ -20877,6 +20892,12 @@ Jiake:
     - regex: 'JK(960|103) 3G(?:[);/ ]|$)'
       device: 'tablet'
       model: 'JK-$1 3G'
+
+# iQ&T (iqandt.com)
+'iQ&T':
+  regex: '(IFoo (?:U200|H55))(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
 
 # philips
 Philips:
