--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -2717,3 +2717,21 @@
     model: JK-960 3G
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; DART KZ07 Build/LMY47I) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/50.0.2661.89 Safari/537.36
+  os:
+    name: Android
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 50.0.2661.89
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Kzen
+    model: Dart KZ07
+  os_family: Android
+  browser_family: Chrome
