feat(device) detect new brand Navitel models: T707 3G, T757 LTE, T700 3G, RE900 Full HD, A731, A730, A650, A737, A735 feat(device) detect new brand Naomi Phone model: Ambar feat(device) detect brand MicroMax models: Infinity N11 (N8216), Infinity N12 (N8301)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -940,7 +940,7 @@ Apple:
 
 # micromax
 MicroMax:
-  regex: '(?:MicroMax[ \-\_]?[a-z0-9]+|Q327)|4560MMX|P70221 Build|(?:YU(?:5040|5530)|AQ5001(?: Canvas Power)?)(?:[);/ ]|$)'
+  regex: '(?:MicroMax[ \-\_]?[a-z0-9]+|Q327)|4560MMX|P70221|(?:YU(?:5040|5530)|AQ5001(?: Canvas Power)?|N8216|N8301)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'AQ5001 Canvas Power'
@@ -951,7 +951,7 @@ MicroMax:
       model: '4560MMX'
     - regex: 'E481'
       model: 'Canvas 5'
-    - regex: 'P70221 Build'
+    - regex: 'P70221(?:[);/ ]|$)'
       model: 'Canvas Tab'
       device: 'tablet'
     - regex: 'Q327'
@@ -968,6 +968,10 @@ MicroMax:
       model: 'Bolt Selfie'
     - regex: 'Q426'
       model: 'Canvas Mega 2'
+    - regex: 'N8216'
+      model: 'Infinity N11'
+    - regex: 'N8301'
+      model: 'Infinity N12'
 
     - regex: 'MicroMax(?:[ \-\_])?(X291|X246|X252|X458|X312)'
       model: '$1'
@@ -20935,6 +20939,26 @@ Datalogic:
   regex: '(?:MEMOR 10)(?:[);/ ]|$)'
   device: 'smartphone'
   model: 'Memor 10'
+
+# Naomi Phone
+Naomi Phone:
+  regex: 'NAOMIPHONE Ambar(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: 'Ambar'
+
+# Navitel (navitel.ru)
+Navitel:
+  regex: 'NAVITEL[ _]'
+  device: 'tablet'
+  models:
+    - regex: 'NAVITEL[ _](T70[07]) 3G(?:[);/ ]|$)'
+      model: '$1 3G'
+    - regex: 'NAVITEL[ _](T757)LTE(?:[);/ ]|$)'
+      model: '$1 LTE'
+    - regex: 'NAVITEL[ _](A73[0157]|A650)(?:[);/ ]|$)'
+      model: '$1'
+    - regex: 'RE900 Full HD(?:[);/ ]|$)'  # combo device table/navigator and camera
+      model: 'RE900 Full HD'
 
 # philips
 Philips:
