--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -2898,7 +2898,7 @@
   os_family: Android
   browser_family: Chrome
 -
- user_agent: Mozilla/5.0 (Linux; Android 5.1.1; NAVITEL A735) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.132 Safari/537.36
+  user_agent: Mozilla/5.0 (Linux; Android 5.1.1; NAVITEL A735) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.132 Safari/537.36
   os:
     name: Android
     version: 5.1.1
@@ -2913,5 +2913,23 @@
     type: tablet
     brand: Navitel
     model: A735
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; LeaPad_X) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/84.0.4147.125 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 84.0.4147.125
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Leagoo
+    model: LeaPad X
   os_family: Android
   browser_family: Chrome
