feat(device) detect brand Ghia model: Vector 10.1"

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5976,7 +5976,7 @@ Geotel:
 
 # Ghia
 Ghia:
-  regex: 'GHIA|QS702'
+  regex: 'GHIA|QS702|VECTOR10\.1'
   device: 'smartphone'
   models:
     - regex: 'QS702'
@@ -5985,6 +5985,9 @@ Ghia:
       model: 'Zeus 3G'
     - regex: 'GHIA_AXIS7'
       model: 'Axis 7'
+      device: 'tablet'
+    - regex: 'VECTOR10\.1'
+      model: 'Vector 10.1"'
       device: 'tablet'
 
 # Gigabyte
