feat(device) detect brand Freetel model: Priori 5 (FTJ17C00)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16944,15 +16944,17 @@ FinePower:
     - regex: 'FinePower[_ ]?([CD][1-9])(?:[);/ ]|$)'
       model: '$1'
 
-# Freetel
+# Freetel (freetel.jp)
 Freetel:
-  regex: '(?:FTJ17A00|FTJ152[ABCD]|FT141B|FT142D_LTEXM|FT142A?|FTJ161[AB]|FTJ1[56]2E|FTJ162[BD]|FTE161[GE])(?:[);/ ]|$)'
+  regex: '(?:FTJ17[AC]00|FTJ152[ABCD]|FT141B|FT142D_LTEXM|FT142A?|FTJ161[AB]|FTJ1[56]2E|FTJ162[BD]|FTE161[GE])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'FTJ152C'
       model: 'Samurai Miyabi'
     - regex: 'FTJ17A00(?:[);/ ]|$)'
       model: 'Rei 2 Dual'
+    - regex: 'FTJ17C00(?:[);/ ]|$)'
+      model: 'Priori 5'
     - regex: 'FTJ161A'
       model: 'Musashi'
     - regex: 'FTE161E'
