feat(device) detect brand Freetel model: Cricket Wave (FTU18A00)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16946,7 +16946,7 @@ FinePower:
 
 # Freetel (freetel.jp)
 Freetel:
-  regex: '(?:FTJ17[AC]00|FTJ152[ABCD]|FT141B|FT142D_LTEXM|FT142A?|FTJ161[AB]|FTJ1[56]2E|FTJ162[BD]|FTE161[GE])(?:[);/ ]|$)'
+  regex: '(?:FTJ17[AC]00|FTJ152[ABCD]|FTU18A00|FT141B|FT142D_LTEXM|FT142A?|FTJ161[AB]|FTJ1[56]2E|FTJ162[BD]|FTE161[GE])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'FTJ152C'
@@ -16955,6 +16955,8 @@ Freetel:
       model: 'Rei 2 Dual'
     - regex: 'FTJ17C00(?:[);/ ]|$)'
       model: 'Priori 5'
+    - regex: 'FTU18A00(?:[);/ ]|$)'
+      model: 'Cricket Wave'
     - regex: 'FTJ161A'
       model: 'Musashi'
     - regex: 'FTE161E'
