feat(device) detect brand Freetel model: XM (FT142D)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16946,7 +16946,7 @@ FinePower:
 
 # Freetel (freetel.jp)
 Freetel:
-  regex: '(?:FTJ17[AC]00|FTJ152[ABCD]|FTU18A00|FT141B|FT142D_LTEXM|FT142A?|FTJ161[AB]|FTJ1[56]2E|FTJ162[BD]|FTE161[GE])(?:[);/ ]|$)'
+  regex: '(?:FTJ17[AC]00|FTJ152[ABCD]|FTU18A00|FT141B|FT142D(?:_LTEXM)?|FT142A?|FTJ161[AB]|FTJ1[56]2E|FTJ162[BD]|FTE161[GE])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'FTJ152C'
@@ -16967,7 +16967,7 @@ Freetel:
       model: 'Raijin'
     - regex: 'FT141B'
       model: 'Nico'
-    - regex: 'FT142D_LTEXM'
+    - regex: 'FT142D(?:_LTEXM)?(?:[);/ ]|$)'
       model: 'XM'
     - regex: 'FT142A?'
       model: 'Priori 2'
