feat(device) detect new brand FaRao Pro model: FTRW100

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -21068,3 +21068,9 @@ Philips:
       model: 'Fisio $1'
     - regex: 'Philips[ _-]?([a-z0-9\-@]+)'
       model: '$1'
+
+# FaRao Pro (www.faraopro.jp)
+FaRao Pro:
+  regex: '(FTRW100)(?:[);/ ]|$)'
+  device: 'tablet'
+  model: '$1'
