--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -9659,3 +9659,21 @@
     model: T95U Pro
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.1; ZIDOO_Z9S) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.101 Safari/537.36
+  os:
+    name: Android
+    version: 7.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 83.0.4103.101
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Zidoo
+    model: Z9S
+  os_family: Android
+  browser_family: Chrome
