feat(device) detect new brand Nabi models: Dream Tab HD 8.0" (DMTAB-NV08B, DMTAB-IN08A), Big Tab HD 20.0" (DMTAB-NV20A),  Big Tab HD 24.0" (DMTAB-NV24A), Barbie Tab 7.0" (NBTY07SMKG), Fisher Price Learning Tab 7.0" (NBFP07PMKG),  2S Tab (SNB02-NV7A), 2 Tab (NABI2-NV7A)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -21074,3 +21074,21 @@ FaRao Pro:
   regex: '(FTRW100)(?:[);/ ]|$)'
   device: 'tablet'
   model: '$1'
+
+# Nabi
+Nabi:
+  regex: '(?:DMTAB-(?:IN08A|NV08B|NV2[04]A)|NBTY07SMKG|NBFP07PMKG|SNB02-NV7A|NABI2-NV7A)(?:[);/ ]|$)'
+  device: 'tablet'
+  models:
+    - regex: 'DMTAB-(?:IN08A|NV08B)'
+      model: 'Dream Tab HD 8.0"'
+    - regex: 'DMTAB-NV(2[04])A'
+      model: 'Big Tab HD $1.0"'
+    - regex: 'NBTY07SMKG'
+      model: 'Barbie Tab 7.0"'
+    - regex: 'NBFP07PMKG'
+      model: 'Fisher Price Learning Tab 7.0"'
+    - regex: 'SNB02-NV7A'
+      model: '2S Tab'
+    - regex: 'NABI2-NV7A'
+      model: '2 Tab'
