feat(device) detect brand Siragon model: SP-5050

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -20249,7 +20249,7 @@ Bluewave:
 
 # Siragon (siragon.com)
 Siragon:
-  regex: '(SP-(?:5250|5400))(?:[);/ ]|$)'
+  regex: '(SP-(?:5250|5400|5050))(?:[);/ ]|$)'
   device: 'smartphone'
   model: '$1'
 
