feat(device) detect brand SPC models: Alien Stick, Alien, Glow 9.7"

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -20108,16 +20108,26 @@ Spark:
 
 # SPC or SPC Universe or SPC Mobile (spc.es)
 SPC:
-  regex: '(?:Gravity Max|GRAVITY_OCTACORE|SPC SMART LITE)(?:[);/ ]|$)'
+  regex: '(?:Gravity Max|GRAVITY_OCTACORE|SPC SMART LITE|SPC_ALIEN(?:_STICK)?|SPC Glow9.7)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'GRAVITY_OCTACORE'
       model: 'Gravity OctaCore'
     - regex: 'Gravity Max'
       model: 'Gravity Max'
+    - regex: 'SPC Glow9.7'
+      model: 'Glow 9.7"'
+
     - regex: 'SPC SMART LITE'
       device: 'smartphone'
       model: 'Smart Lite'
+
+    - regex: 'SPC_ALIEN_STICK'
+      device: 'tv'
+      model: 'Alien Stick'
+    - regex: 'SPC_ALIEN'
+      device: 'tv'
+      model: 'Alien'
 
 # Winmax (winmaxmobile.com)
 Winmax:
