--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -9677,3 +9677,39 @@
     model: Z9S
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; SPC_ALIEN_STICK) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/77.0.3865.92 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 77.0.3865.92
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: SPC
+    model: Alien Stick
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; SPC_ALIEN) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.111 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 76.0.3809.111
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: SPC
+    model: Alien
+  os_family: Android
+  browser_family: Chrome
