feat(device) detect new brand StrawBerry models: QX15, SX

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -21104,3 +21104,11 @@ Nabi:
       model: '2S Tab'
     - regex: 'NABI2-NV7A'
       model: '2 Tab'
+
+# StrawBerry
+StrawBerry:
+  regex: 'StrawBerry[ _]'
+  device: 'smartphone'
+  models:
+    - regex: 'StrawBerry[ _](SX|QX15)(?:[);/ ]|$)'
+      model: '$1'
